// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webmentions (receiving) can display page title in notification email 1: [html 1] 1`] = `
"<!doctype html>
<html>
  <head>
    <meta name=\\"viewport\\" content=\\"width=device-width\\">
    <meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\">
    <title>💌 New mention from:http://testpage.com/external-article-12345-email-test/</title>
    <style>
    /* -------------------------------------
        GLOBAL RESETS
    ------------------------------------- */
    
    /*All the styling goes here*/
    
    img {
        border: none;
        -ms-interpolation-mode: bicubic;
        max-width: 100%;
    }
    
    body {
        background-color: #fff;
        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
        -webkit-font-smoothing: antialiased;
        font-size: 18px;
        line-height: 1.4;
        margin: 0;
        padding: 0;
        -ms-text-size-adjust: 100%;
        -webkit-text-size-adjust: 100%;
        color: #15212A;
    }
    
    table {
        border-collapse: separate;
        mso-table-lspace: 0pt;
        mso-table-rspace: 0pt;
        width: 100%;
    }
    
    table td {
        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
        font-size: 18px;
        vertical-align: top;
        color: #15212A;
    }
    
    /* -------------------------------------
        BODY & CONTAINER
    ------------------------------------- */
    .body {
        background-color: #fff;
        width: 100%;
    }
    
    /* Set a max-width, and make it display as block so it will automatically stretch to that width, but will also shrink down on a phone or something */
    .container {
        display: block;
        margin: 0 auto !important;
        /* makes it centered */
        max-width: 600px;
    }
    
    /* This should also be a block element, so that it will fill 100% of the .container */
    .content {
        box-sizing: border-box;
        display: block;
        margin: 0 auto;
        max-width: 600px;
    }
    
    .content a {
        overflow-wrap: anywhere;
    }
    
    /* -------------------------------------
        POST CONTENT
    ------------------------------------- */
    hr {
        position: relative;
        display: block;
        width: 100%;
        margin: 3em 0;
        padding: 0;
        height: 1px;
        border: 0;
        border-top: 1px solid #e5eff5;
    }
    
    p,
    ul,
    ol,
    dl,
    blockquote {
        margin: 0 0 1.5em 0;
        line-height: 1.6em;
    }
    
    ol,
    ul {
        padding-left: 1.3em;
        padding-right: 1.5em;
    }
    
    ol ol,
    ul ul,
    ul ol,
    ol ul {
        margin: 0.5em 0 1em;
    }
    
    ul {
        list-style: disc;
    }
    
    ol {
        list-style: decimal;
    }
    
    ul,
    ol {
        max-width: 100%;
    }
    
    li {
        margin: 0.5em 0;
        padding-left: 0.3em;
        line-height: 1.6em;
    }
    
    dt {
        float: left;
        margin: 0 20px 0 0;
        width: 120px;
        color: #15212A;
        font-weight: 500;
        text-align: right;
    }
    
    dd {
        margin: 0 0 5px 0;
        text-align: left;
    }
    
    blockquote {
        margin: 2em 0 2em 0;
        padding: 0 25px 0 25px;
        border-left: #FF1A75 2px solid;
        font-size: 17px;
        font-weight: 500;
        line-height: 1.6em;
        letter-spacing: -0.2px;
    }
    
    blockquote.kg-blockquote-alt {
        border-left: 0 none;
        padding: 0 50px 0 50px;
        text-align: center;
        font-size: 1.2em;
        font-style: italic;
        color: #999999;
    }
    
    blockquote p {
        margin: 0.8em 0;
        font-size: 1em;
    }
    
    blockquote small {
        display: inline-block;
        margin: 0.8em 0 0.8em 1.5em;
        font-size: 0.9em;
        opacity: 0.8;
    }
    
    blockquote cite {
        font-weight: bold;
    }
    blockquote cite a {
        font-weight: normal;
    }
    
    a {
        color: #FF1A75;
        text-decoration: none;
    }
    
    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
        margin-top: 0;
        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
        line-height: 1.11em;
        font-weight: 700;
        text-rendering: optimizeLegibility;
    }
    
    h1 {
        margin: 1.5em 0 0.5em 0;
        font-size: 42px;
        font-weight: 700;
    }
    
    h2 {
        margin: 1.5em 0 0.5em 0;
        font-size: 32px;
    }
    
    h3 {
        margin: 1.5em 0 0.5em 0;
        font-size: 26px;
    }
    
    h4 {
        margin: 1.8em 0 0.5em 0;
        font-size: 21px;
        line-height: 1.2em;
    }
    
    h5 {
        margin: 2em 0 0.5em 0;
        font-size: 19px;
        line-height: 1.3em;
    }
    
    h6 {
        margin: 2em 0 0.5em 0;
        font-size: 19px;
        line-height: 1.3em;
        font-weight: 700;
    }
    
    h1 strong,
    h2 strong,
    h3 strong,
    h4 strong,
    h5 strong,
    h6 strong {
        font-weight: 800;
    }
    
    strong {
        font-weight: 700;
    }
    
    figure {
        margin: 0 0 1.5em;
        padding: 0;
    }
    
    figcaption {
        text-align: center;
        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
        font-size: 14px;
        padding-top: 5px;
        line-height: 1.5em;
    }
    
    code {
        font-size: 0.9em;
    }
    
    pre {
        white-space: pre-wrap;
        overflow: auto;
        background: #15212A;
        padding: 15px;
        border-radius: 3px;
        line-height: 1.2em;
        color: #ffffff;
    }
    
    p code,
    li code {
        background: #F2F7FA;
        word-break: break-all;
        padding: 1px 7px;
        border-radius: 3px;
        color: #FF1A75;
    }
    
    figure blockquote p {
        font-size: 1em;
    }
    
    .header-image {
        padding-top: 16px;
    }
    
    .site-icon {
        padding-bottom: 10px;
        padding-top: 20px;
        text-align: center;
        border-radius: 3px;
    }
    
    .site-icon img {
        width: 48px;
        height: 48px;
        border-radius: 3px;
    }
    
    .site-info {
        padding-top: 50px;
    }
    
    .site-info-bordered {
        padding-top: 50px;
        border-bottom: 1px solid #e5eff5;
    }
    
    .site-url {
        color: #15212A;
        font-size: 16px;
        letter-spacing: -0.1px;
        font-weight: 700;
        text-transform: uppercase;
        text-align: center;
    }
    
    .site-url-bottom-padding {
        padding-bottom: 50px;
    }
    
    .site-title {
        color: #15212A;
    }
    
    .site-subtitle {
        color: #8695a4;
        font-size: 14px;
        font-weight: 400;
        text-transform: none;
    }
    
    .post-title {
        padding-bottom: 10px;
        font-size: 42px;
        line-height: 1.1em;
        font-weight: 700;
        text-align: center;
    }
    .post-title-serif {
        font-family: Georgia, serif;
        letter-spacing: -0.01em;
    }
    .post-title-left {
        text-align: left;
    }
    
    .post-title-link {
        color: #15212A;
        display: block;
        text-align: center;
        margin-top: 50px;
    }
    .post-title-link-left {
        text-align: left;
    }
    
    .post-meta,
    .view-online {
        padding-bottom: 50px;
        color: #738a94;
        font-size: 13px;
        letter-spacing: 0.2px;
        text-transform: uppercase;
        text-align: center;
    }
    
    .post-meta-left {
        text-align: left;
    }
    
    .post-meta-date {
        white-space: nowrap;
    }
    
    .view-online {
        text-align: right;
    }
    
    .view-online-link {
        word-wrap: none;
        white-space: nowrap;
        color: #15212A;
    }
    
    .feature-image {
        padding-bottom: 30px;
        width: 100%;
    }
    
    .feature-image-with-caption {
        padding-bottom: 10px;
    }
    
    .feature-image-caption {
        width: 100%;
        padding-bottom: 30px;
        text-align: center;
        font-size: 13px;
        color: #738a94;
    }
    
    .post-content {
        max-width: 600px !important;
        font-family: Georgia, serif;
        font-size: 18px;
        line-height: 1.5em;
        color: #15212A;
        padding-bottom: 20px;
        border-bottom: 1px solid #e5eff5;
    }
    
    .post-content-sans-serif {
        max-width: 600px !important;
        font-size: 17px;
        line-height: 1.5em;
        color: #15212A;
        padding-bottom: 20px;
        border-bottom: 1px solid #e5eff5;
    }
    
    .post-content a,
    .post-content-sans-serif a {
        color: #FF1A75;
        text-decoration: underline;
    }
    
    a[data-flickr-embed] img {
        height: auto;
    }
    
    .kg-bookmark-card {
        width: 100%;
        background: #ffffff;
    }
    
    .kg-bookmark-card a {
        text-decoration: none;
    }
    
    .kg-card + .kg-bookmark-card {
        margin-top: 0;
    }
    
    .kg-image-card img {
        display: block;
        margin: 0 auto;
        width: auto;
        height: auto !important;
    }
    
    .kg-bookmark-container {
        display: flex;
        min-height: 148px;
        color: #15212A;
        font-family: -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Oxygen, Ubuntu, Cantarell, \\"Open Sans\\", \\"Helvetica Neue\\", sans-serif;
        text-decoration: none;
        border-radius: 3px;
        border: 1px solid #e5eff5;
    }
    
    .kg-bookmark-content {
        display: inline-block;
        width: 100%;
        padding: 20px;
    }
    
    .kg-bookmark-title {
        color: #15212A;
        font-size: 15px;
        line-height: 1.5em;
        font-weight: 600;
    }
    
    .kg-bookmark-description {
        display: -webkit-box;
        overflow-y: hidden;
        margin-top: 12px;
        max-height: 40px;
        color: #738a94;
        font-size: 13px;
        line-height: 1.5em;
        font-weight: 400;
    
        -webkit-line-clamp: 2;
        -webkit-box-orient: vertical;
    }
    
    .kg-bookmark-thumbnail {
        min-width: 140px;
        max-width: 180px;
        background-repeat: no-repeat;
        background-size: cover;
        background-position: center;
        border-radius: 0 2px 2px 0;
    }
    
    .kg-bookmark-thumbnail img {
        display: none;
    }
    
    .kg-bookmark-metadata {
        display: flex;
        flex-wrap: wrap;
        align-items: center;
        margin-top: 14px;
        color: #15212A;
        font-size: 13px;
        font-weight: 400;
    }
    
    .kg-bookmark-icon {
        margin-right: 8px;
        width: 22px;
        height: 22px;
    }
    
    .kg-bookmark-author {
        line-height: 1.5em;
    }
    
    .kg-bookmark-publisher {
        overflow: hidden;
        max-width: 240px;
        line-height: 1.5em;
        text-overflow: ellipsis;
        white-space: nowrap;
    }
    
    .kg-bookmark-publisher:before {
        content: \\"•\\";
        margin: 0 6px;
    }
    
    .kg-gallery-container {
        margin-top: -20px;
    }
    
    .kg-gallery-image img {
        width: 100% !important;
        height: auto !important;
        padding-top: 20px;
    }
    
    .kg-video-preview {
        background-color: #1d1f21;
        background-image: radial-gradient(circle at center, #5b5f66, #1d1f21);
        display: block;
        text-decoration: none !important;
    }
    
    .kg-video-preview table {
        background-size: cover;
        min-height: 200px; /* for when images aren't loaded */
    }
    
    .kg-video-play-button {
        height: 2em;
        width: 3em;
        margin: 0 auto;
        border-radius: 10px;
        padding: 1em 0.8em 0.6em 1em;
        font-size: 1em; /* change this to resize */
        background-color: rgba(0,0,0,0.85);
    }
    
    .kg-video-play-button div {
        display: block;
        width: 0;
        height: 0;
        margin: 0 auto;
        line-height: 0px; /* fix for Yahoo Mail */
        border-color: transparent transparent transparent white;
        border-style: solid;
        border-width: 0.8em 0 0.8em 1.5em;
    }
    
    .kg-nft-link {
        display: block;
        text-decoration: none !important;
        color: #15212A !important;
        font-family: inherit !important;
        font-size: 14px;
        line-height: 1.3em;
        padding-top: 4px;
        padding-right: 20px;
        padding-left: 20px;
        padding-bottom: 4px;
    }
    
    .kg-twitter-link {
        display: block;
        text-decoration: none !important;
        color: #15212A !important;
        font-family: inherit !important;
        font-size: 15px;
        padding: 8px;
        line-height: 1.3em;
    }
    
    .kg-audio-thumbnail.placeholder {
        background: #FF1A75 !important;
    }
    
    .kg-callout-card {
        display: flex;
        margin: 0 0 1.5em 0;
        padding: 20px 28px;
        border-radius: 3px;
    }
    
    .kg-callout-card p {
        margin: 0
    }
    
    .kg-callout-card-grey {
        background: #eef0f2;
    }
    
    .kg-callout-card-white {
        background: #fff;
        box-shadow: inset 0 0 0 1px #dddedf;
    }
    
    .kg-callout-card-blue {
        background: #E9F6FB;
    }
    
    .kg-callout-card-green {
        background: #E8F8EA;
    }
    
    .kg-callout-card-yellow {
        background: #FCF4E3;
    }
    
    .kg-callout-card-red {
        background: #FBE9E9;
    }
    
    .kg-callout-card-pink {
        background: #FCEEF8;
    }
    
    .kg-callout-card-purple {
        background: #F2EDFC;
    }
    
    .kg-callout-card-accent {
        background: #FF1A75;
        color: #fff;
    }
    
    .kg-callout-card-accent a {
        color: #fff;
    }
    
    .kg-callout-emoji {
        padding-right: 12px;
        font-size: 20px;
    }
    
    .kg-header-card {
        margin: 0 0 1.5em 0;
        padding: 110px 35px 110px 35px;
        text-align: center;
    }
    
    .kg-header-card.kg-size-small {
        padding-top: 75px;
        padding-bottom: 75px;
    }
    
    .kg-header-card.kg-size-large {
        padding-top: 140px;
        padding-bottom: 140px;
    }
    
    .kg-header-card.kg-align-left {
        text-align: left;
    }
    
    .kg-header-card.kg-style-dark {
        background: #15171a;
        color: #ffffff;
    }
    
    .kg-header-card.kg-style-light {
        background-color: #F9F9FA;
    }
    
    .kg-header-card.kg-style-accent {
        background: #FF1A75;
        color: #ffffff;
    }
    
    .kg-header-card.kg-style-image {
        background-color: #e7e7eb;
        background-size: cover;
        background-position: center center;
        color: #ffffff;
    }
    
    .kg-header-card h2 {
        font-size: 3em;
        font-weight: 700;
        line-height: 1.1em;
        margin: 0 0 0.125em;
    }
    
    .kg-header-card h2 strong {
        font-weight: 800;
    }
    
    .kg-header-card.kg-size-small h2 {
        font-size: 2.5em;
    }
    
    .kg-header-card.kg-size-large h2 {
        font-size: 3.5em;
    }
    
    .kg-header-card h3 {
        font-size: 1.125em;
        font-weight: 500;
        line-height: 1.3em;
        margin: 0;
    }
    
    .kg-header-card h3 strong {
        font-weight: 700;
    }
    
    .kg-header-card.kg-size-large h3 {
        font-size: 1.25em;
    }
    
    .kg-header-card.kg-size-small h3 {
        font-size: 1em;
    }
    
    .kg-header-card-button {
        margin-top: 1.75em;
        background: #ffffff;
        border-radius: 5px;
        box-sizing: border-box;
        cursor: pointer;
        display: inline-block;
        font-size: 14px;
        font-weight: bold;
        margin: 0;
        padding: 8px 16px;
        text-decoration: none !important;
        color: #15171A !important;
    }
    
    .kg-size-large .kg-header-card-button {
        margin-top: 2em;
    }
    
    .kg-size-small .kg-header-card-button {
        margin-top: 1.5em;
    }
    
    .kg-style-light .kg-header-card-button {
        background: #FF1A75 !important;
        color: #ffffff !important;
    }
    
    
    /* -------------------------------------
        HEADER, FOOTER, MAIN
    ------------------------------------- */
    .main {
        background: #ffffff;
        border-radius: 3px;
        width: 100%;
    }
    
    .wrapper {
        box-sizing: border-box;
        padding: 0 20px;
    }
    
    .content-block {
        padding-bottom: 10px;
        padding-top: 10px;
    }
    
    .footer {
        color: #738a94;
        margin-top: 20px;
        text-align: center;
        font-size: 13px;
        padding-bottom: 10px;
        padding-top: 10px;
        padding-left: 30px;
        padding-right: 30px;
        line-height: 1.5em;
    }
    
    .footer a {
        color: #738a94;
        text-decoration: underline;
    }
    
    /* -------------------------------------
        BUTTONS
    ------------------------------------- */
    .btn {
        box-sizing: border-box;
        width: 100%;
        display: table;
    }
    
    .btn>tbody>tr>td {
        padding-bottom: 15px;
    }
    
    .btn table {
        width: auto;
    }
    
    .btn table td {
        background-color: #ffffff;
        border-radius: 5px;
        text-align: center;
    }
    
    .btn a {
        background-color: #ffffff;
        border: solid 1px #3498db;
        border-radius: 5px;
        box-sizing: border-box;
        color: #3498db;
        cursor: pointer;
        display: inline-block;
        font-size: 14px;
        font-weight: bold;
        margin: 0;
        padding: 12px 25px;
        text-decoration: none;
    }
    
    .btn-primary table td {
        background-color: #3498db;
    }
    
    .btn-primary a {
        background-color: #3498db;
        border-color: #3498db;
        color: #ffffff;
    }
    
    .btn-accent table td {
        background-color: ;
    }
    
    .btn-accent a {
        background-color: ;
        border-color: ;
        color: ;
    }
    
    /* -------------------------------------
        OTHER STYLES THAT MIGHT BE USEFUL
    ------------------------------------- */
    .last {
        margin-bottom: 0;
    }
    
    .first {
        margin-top: 0;
    }
    
    .align-center {
        text-align: center;
    }
    
    .align-right {
        text-align: right;
    }
    
    .align-left {
        text-align: left;
    }
    
    .clear {
        clear: both;
    }
    
    .mt0 {
        margin-top: 0;
    }
    
    .mb0 {
        margin-bottom: 0;
    }
    
    .preheader {
        color: transparent;
        display: none;
        height: 0;
        max-height: 0;
        max-width: 0;
        opacity: 0;
        overflow: hidden;
        mso-hide: all;
        visibility: hidden;
        width: 0;
    }
    
    /* -------------------------------------
        RESPONSIVE AND MOBILE FRIENDLY STYLES
    ------------------------------------- */
    @media only screen and (max-width: 620px) {
    
        table.body {
            width: 100%;
            min-width: 100%;
        }
    
        table.body p,
        table.body ul,
        table.body ol,
        table.body td,
        table.body span {
            font-size: 16px !important;
        }
    
        table.body pre {
            white-space: pre-wrap !important;
            word-break: break-word !important;
        }
    
        table.body .wrapper,
        table.body .article {
            padding: 0 10px !important;
        }
    
        table.body .content {
            padding: 0 !important;
        }
    
        table.body .container {
            padding: 0 !important;
            width: 100% !important;
        }
    
        table.body .main {
            border-left-width: 0 !important;
            border-radius: 0 !important;
            border-right-width: 0 !important;
        }
    
        table.body .btn table {
            width: 100% !important;
        }
    
        table.body .btn a {
            width: 100% !important;
        }
    
        table.body .img-responsive {
            height: auto !important;
            max-width: 100% !important;
            width: auto !important;
        }
    
        table.body .site-icon img {
            width: 40px !important;
            height: 40px !important;
        }
    
        table.body .site-url a {
            font-size: 14px !important;
            padding-bottom: 15px !important;
        }
    
        table.body .post-meta {
            white-space: normal !important;
            font-size: 12px !important;
            line-height: 1.5em;
        }
    
        table.body .view-online-link,
        table.body .footer,
        table.body .footer a {
            font-size: 12px !important;
        }
    
        table.body .post-title a {
            font-size: 32px !important;
            line-height: 1.15em !important;
        }
    
        table.body .kg-bookmark-card {
            width: 90vw;
        }
    
        table.body .kg-bookmark-thumbnail {
            display: none !important;
        }
    
        table.body .kg-bookmark-metadata span {
            font-size: 13px !important;
        }
    
        table.body .kg-embed-card {
            max-width: 90vw !important;
        }
    
        table.body h1 {
            font-size: 32px !important;
            line-height: 1.3em !important;
        }
    
        table.body h2 {
            font-size: 26px !important;
            line-height: 1.22em !important;
        }
    
        table.body h3 {
            font-size: 21px !important;
            line-height: 1.25em !important;
        }
    
        table.body h4 {
            font-size: 19px !important;
            line-height: 1.3em !important;
        }
    
        table.body h5 {
            font-size: 16px !important;
            line-height: 1.4em !important;
        }
    
        table.body h6 {
            font-size: 16px !important;
            line-height: 1.4em !important;
        }
    
        table.body blockquote {
            font-size: 17px;
            line-height: 1.6em;
            margin-bottom: 0;
            padding-left: 15px;
        }
    
        table.body blockquote.kg-blockquote-alt {
            border-left: 0 none !important;
            margin: 0 0 2.5em 0 !important;
            padding: 0 50px 0 50px !important;
            font-size: 1.2em;
        }
    
        table.body blockquote + * {
            margin-top: 1.5em !important;
        }
    
        table.body hr {
            margin: 2em 0 !important;
        }
    
        table.body figcaption,
        table.body figcaption a {
            font-size: 13px !important;
        }
    
    }
    
    /* -------------------------------------
        PRESERVE THESE STYLES IN THE HEAD
    ------------------------------------- */
    @media all {
        .ExternalClass {
            width: 100%;
        }
    
        .ExternalClass,
        .ExternalClass p,
        .ExternalClass span,
        .ExternalClass font,
        .ExternalClass td,
        .ExternalClass div {
            line-height: 100%;
        }
    
        .apple-link a {
            color: inherit !important;
            font-family: inherit !important;
            font-size: inherit !important;
            font-weight: inherit !important;
            line-height: inherit !important;
            text-decoration: none !important;
        }
    
        #MessageViewBody a {
            color: inherit;
            text-decoration: none;
            font-size: inherit;
            font-family: inherit;
            font-weight: inherit;
            line-height: inherit;
        }
    
        .btn-primary table td:hover {
            background-color: #34495e !important;
        }
    
        .btn-primary a:hover {
            background-color: #34495e !important;
            border-color: #34495e !important;
        }
    }
    
    </style>
  </head>
  <body style=\\"background-color: #ffffff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; -webkit-font-smoothing: antialiased; font-size: 14px; line-height: 1.5em; margin: 0; padding: 0; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%;\\">

    <table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"body\\" style=\\"border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;\\">
      <tr>
        <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top;\\">&nbsp;</td>
        <td class=\\"container\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top; display: block; Margin: 0 auto; padding: 10px;\\">
          <div class=\\"content\\" style=\\"box-sizing: border-box; display: block; Margin: 0 auto; max-width: 600px; padding: 30px 20px;\\">

            <!-- START CENTERED CONTAINER -->
            <table class=\\"main\\" style=\\"border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; background: #ffffff; border-radius: 8px;\\">

              <!-- START MAIN CONTENT AREA -->
              <tr>
                <td class=\\"wrapper\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top; box-sizing: border-box;\\">
                  <table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;\\">
                    <tr>
                      <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top;\\">
                        <p style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 20px; color: #15212A; font-weight: bold; line-height: 25px; margin: 0; margin-bottom: 15px;\\">Hey there,</p>
                        <p style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 16px; color: #3A464C; font-weight: normal; margin: 0; line-height: 25px; margin-bottom: 16px;\\">Your  page  <a href=\\"http://127.0.0.1:2369/about/\\" style=\\"font-weight: bold; color: #15212A;\\">About this site</a> was mentioned in:</p>

                        <!--[if !mso !vml]-->
                        <figure style=\\"margin:0 0 1.5em;padding:0;width:100%;\\">
                          <a style=\\"display:flex;min-height:148px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;background:#F9F9FA;border-radius:3px;border:1px solid #F9F9FA;color:#15171a;text-decoration:none\\" href=\\"http://testpage.com/external-article-12345-email-test/\\">
                            <div style=\\"display:inline-block; width:100%; padding:20px\\">
                              <div style=\\"color:#15212a;font-size:16px;line-height:1.3em;font-weight:600\\">Test Page</div>
                              <div style=\\"display:-webkit-box;overflow-y:hidden;margin-top:12px;max-height:40px;color:#738a94;font-size:13px;line-height:1.5em;font-weight:400\\">Test description</div>
                              <div style=\\"display:flex;margin-top:14px;color:#15212a;font-size:13px;font-weight:400\\">
                                
                                
                                <span style=\\"font-size:13px;line-height:1.5em\\">&nbsp;&#x2022;&nbsp;John Doe</span>
                              </div>
                            </div>
                          </a>
                        </figure>
                        <!--[endif]-->

                        <!--[if vml]>
                        <table style=\\"border-collapse: collapse; border-spacing: 0; margin: 0; padding: 0; width: 100%; border: 1px solid #f9f9fa; background: #f9f9fa; font-family: -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Oxygen, Ubuntu, Cantarell, \\"Open Sans\\", \\"Helvetica Neue\\", sans-serif;\\">
                            <tr>
                                <td width=\\"100%\\" style=\\"padding: 20px;\\">
                                    <table style=\\"margin: 0; padding: 0; border-collapse: collapse; border-spacing: 0;\\">
                                        <tr>
                                            <td><a style=\\"color: #15212A; font-size: 15px; line-height: 1.5em; font-weight: 600; text-decoration: none;\\" href=\\"http://testpage.com/external-article-12345-email-test/\\">Test Page</a></td>
                                        </tr>
                                        <tr>
                                            <td><div><a href=\\"http://testpage.com/external-article-12345-email-test/\\" style=\\"margin-top: 12px; color: #738a94; font-size: 13px; line-height: 1.5em; font-weight: 400;text-decoration: none;\\">Test description</a></div></td>
                                        </tr>
                                        <tr>
                                            <td style=\\"padding-top: 14px; color: #15212A; font-size: 13px; font-weight: 400; line-height: 1.5em;\\">
                                                <table style=\\"margin: 0; padding: 0; border-collapse: collapse; border-spacing: 0;\\">
                                                    <tr>
                                                        <td valign=\\"middle\\">
                                                            <a href=\\"http://testpage.com/external-article-12345-email-test/\\" style=\\"color: #15212A; text-decoration: none;\\">
                                                                
                                                                &nbsp;&#x2022;&nbsp;
                                                                John Doe
                                                            </a>
                                                        </td>
                                                    </tr>
                                                </table>
                                            </td>
                                        </tr>
                                    </table>
                                </td>
                            </tr>
                        </table>
                        <![endif]-->

                        <table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"btn btn-primary\\" style=\\"border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; box-sizing: border-box;\\">
                          <tbody>
                            <tr>
                              <td align=\\"left\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 16px; vertical-align: top; padding-top: 32px; padding-bottom: 12px;\\">
                                <table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: auto;\\">
                                  <tbody>
                                    <tr>
                                      <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 16px; vertical-align: top; background-color: #FF1A75; border-radius: 5px; text-align: center;\\"> <a href=\\"http://127.0.0.1:2369/ghost/#/mentions\\" target=\\"_blank\\" style=\\"display: inline-block; color: #ffffff; background-color: #FF1A75; border: solid 1px #FF1A75; border-radius: 5px; box-sizing: border-box; cursor: pointer; text-decoration: none; font-size: 16px; font-weight: normal; margin: 0; padding: 9px 22px 10px; border-color: #FF1A75;\\">View mentions</a></td>
                                    </tr>
                                  </tbody>
                                </table>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                        <hr/>
                        <p style=\\"word-break: break-all; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 15px; color: #3A464C; font-weight: normal; margin: 0; line-height: 25px; margin-bottom: 5px;\\">You can also copy & paste this URL into your browser:</p>
                        <p class=\\"text-link\\" style=\\"word-break: break-all; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 15px; line-height: 25px; margin-top:0; color: #3A464C;\\">http://127.0.0.1:2369/ghost/#/mentions</p>
                      </td>
                    </tr>

                    <!-- START FOOTER -->
                    <tr>
                        <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top; padding-top: 80px;\\">
                        <p class=\\"small\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; line-height: 18px; font-size: 11px; color: #738A94; font-weight: normal; margin: 0; margin-bottom: 2px;\\">This message was sent from <a class=\\"small\\" href=\\"http://127.0.0.1:2369/\\" style=\\"text-decoration: underline; color: #738A94; font-size: 11px;\\">127.0.0.1</a> to <a class=\\"small\\" href=\\"mailto:jbloggs@example.com\\" style=\\"text-decoration: underline; color: #738A94; font-size: 11px;\\">jbloggs@example.com</a></p>
                      </td>
                    </tr>
                    <tr>
                      <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top; padding-top: 2px\\">
                        <p class=\\"small\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; line-height: 18px; font-size: 11px; color: #738A94; font-weight: normal; margin: 0; margin-bottom: 2px;\\">Don’t want to receive these emails? Manage your preferences <a class=\\"small\\" href=\\"http://127.0.0.1:2369/ghost/#/settings/staff/joe-bloggs\\" style=\\"text-decoration: underline; color: #738A94; font-size: 11px;\\">here</a>.</p>
                      </td>
                    </tr>

                    <!-- END FOOTER -->
                  </table>
                </td>
              </tr>

            <!-- END MAIN CONTENT AREA -->
            </table>


          <!-- END CENTERED CONTAINER -->
          </div>
        </td>
        <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top;\\">&nbsp;</td>
      </tr>
    </table>
  </body>
</html>
"
`;

exports[`Webmentions (receiving) can display post title in notification email 1: [html 1] 1`] = `
"<!doctype html>
<html>
  <head>
    <meta name=\\"viewport\\" content=\\"width=device-width\\">
    <meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\">
    <title>💌 New mention from:http://testpage.com/external-article-1234-email-test/</title>
    <style>
    /* -------------------------------------
        GLOBAL RESETS
    ------------------------------------- */
    
    /*All the styling goes here*/
    
    img {
        border: none;
        -ms-interpolation-mode: bicubic;
        max-width: 100%;
    }
    
    body {
        background-color: #fff;
        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
        -webkit-font-smoothing: antialiased;
        font-size: 18px;
        line-height: 1.4;
        margin: 0;
        padding: 0;
        -ms-text-size-adjust: 100%;
        -webkit-text-size-adjust: 100%;
        color: #15212A;
    }
    
    table {
        border-collapse: separate;
        mso-table-lspace: 0pt;
        mso-table-rspace: 0pt;
        width: 100%;
    }
    
    table td {
        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
        font-size: 18px;
        vertical-align: top;
        color: #15212A;
    }
    
    /* -------------------------------------
        BODY & CONTAINER
    ------------------------------------- */
    .body {
        background-color: #fff;
        width: 100%;
    }
    
    /* Set a max-width, and make it display as block so it will automatically stretch to that width, but will also shrink down on a phone or something */
    .container {
        display: block;
        margin: 0 auto !important;
        /* makes it centered */
        max-width: 600px;
    }
    
    /* This should also be a block element, so that it will fill 100% of the .container */
    .content {
        box-sizing: border-box;
        display: block;
        margin: 0 auto;
        max-width: 600px;
    }
    
    .content a {
        overflow-wrap: anywhere;
    }
    
    /* -------------------------------------
        POST CONTENT
    ------------------------------------- */
    hr {
        position: relative;
        display: block;
        width: 100%;
        margin: 3em 0;
        padding: 0;
        height: 1px;
        border: 0;
        border-top: 1px solid #e5eff5;
    }
    
    p,
    ul,
    ol,
    dl,
    blockquote {
        margin: 0 0 1.5em 0;
        line-height: 1.6em;
    }
    
    ol,
    ul {
        padding-left: 1.3em;
        padding-right: 1.5em;
    }
    
    ol ol,
    ul ul,
    ul ol,
    ol ul {
        margin: 0.5em 0 1em;
    }
    
    ul {
        list-style: disc;
    }
    
    ol {
        list-style: decimal;
    }
    
    ul,
    ol {
        max-width: 100%;
    }
    
    li {
        margin: 0.5em 0;
        padding-left: 0.3em;
        line-height: 1.6em;
    }
    
    dt {
        float: left;
        margin: 0 20px 0 0;
        width: 120px;
        color: #15212A;
        font-weight: 500;
        text-align: right;
    }
    
    dd {
        margin: 0 0 5px 0;
        text-align: left;
    }
    
    blockquote {
        margin: 2em 0 2em 0;
        padding: 0 25px 0 25px;
        border-left: #FF1A75 2px solid;
        font-size: 17px;
        font-weight: 500;
        line-height: 1.6em;
        letter-spacing: -0.2px;
    }
    
    blockquote.kg-blockquote-alt {
        border-left: 0 none;
        padding: 0 50px 0 50px;
        text-align: center;
        font-size: 1.2em;
        font-style: italic;
        color: #999999;
    }
    
    blockquote p {
        margin: 0.8em 0;
        font-size: 1em;
    }
    
    blockquote small {
        display: inline-block;
        margin: 0.8em 0 0.8em 1.5em;
        font-size: 0.9em;
        opacity: 0.8;
    }
    
    blockquote cite {
        font-weight: bold;
    }
    blockquote cite a {
        font-weight: normal;
    }
    
    a {
        color: #FF1A75;
        text-decoration: none;
    }
    
    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
        margin-top: 0;
        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
        line-height: 1.11em;
        font-weight: 700;
        text-rendering: optimizeLegibility;
    }
    
    h1 {
        margin: 1.5em 0 0.5em 0;
        font-size: 42px;
        font-weight: 700;
    }
    
    h2 {
        margin: 1.5em 0 0.5em 0;
        font-size: 32px;
    }
    
    h3 {
        margin: 1.5em 0 0.5em 0;
        font-size: 26px;
    }
    
    h4 {
        margin: 1.8em 0 0.5em 0;
        font-size: 21px;
        line-height: 1.2em;
    }
    
    h5 {
        margin: 2em 0 0.5em 0;
        font-size: 19px;
        line-height: 1.3em;
    }
    
    h6 {
        margin: 2em 0 0.5em 0;
        font-size: 19px;
        line-height: 1.3em;
        font-weight: 700;
    }
    
    h1 strong,
    h2 strong,
    h3 strong,
    h4 strong,
    h5 strong,
    h6 strong {
        font-weight: 800;
    }
    
    strong {
        font-weight: 700;
    }
    
    figure {
        margin: 0 0 1.5em;
        padding: 0;
    }
    
    figcaption {
        text-align: center;
        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
        font-size: 14px;
        padding-top: 5px;
        line-height: 1.5em;
    }
    
    code {
        font-size: 0.9em;
    }
    
    pre {
        white-space: pre-wrap;
        overflow: auto;
        background: #15212A;
        padding: 15px;
        border-radius: 3px;
        line-height: 1.2em;
        color: #ffffff;
    }
    
    p code,
    li code {
        background: #F2F7FA;
        word-break: break-all;
        padding: 1px 7px;
        border-radius: 3px;
        color: #FF1A75;
    }
    
    figure blockquote p {
        font-size: 1em;
    }
    
    .header-image {
        padding-top: 16px;
    }
    
    .site-icon {
        padding-bottom: 10px;
        padding-top: 20px;
        text-align: center;
        border-radius: 3px;
    }
    
    .site-icon img {
        width: 48px;
        height: 48px;
        border-radius: 3px;
    }
    
    .site-info {
        padding-top: 50px;
    }
    
    .site-info-bordered {
        padding-top: 50px;
        border-bottom: 1px solid #e5eff5;
    }
    
    .site-url {
        color: #15212A;
        font-size: 16px;
        letter-spacing: -0.1px;
        font-weight: 700;
        text-transform: uppercase;
        text-align: center;
    }
    
    .site-url-bottom-padding {
        padding-bottom: 50px;
    }
    
    .site-title {
        color: #15212A;
    }
    
    .site-subtitle {
        color: #8695a4;
        font-size: 14px;
        font-weight: 400;
        text-transform: none;
    }
    
    .post-title {
        padding-bottom: 10px;
        font-size: 42px;
        line-height: 1.1em;
        font-weight: 700;
        text-align: center;
    }
    .post-title-serif {
        font-family: Georgia, serif;
        letter-spacing: -0.01em;
    }
    .post-title-left {
        text-align: left;
    }
    
    .post-title-link {
        color: #15212A;
        display: block;
        text-align: center;
        margin-top: 50px;
    }
    .post-title-link-left {
        text-align: left;
    }
    
    .post-meta,
    .view-online {
        padding-bottom: 50px;
        color: #738a94;
        font-size: 13px;
        letter-spacing: 0.2px;
        text-transform: uppercase;
        text-align: center;
    }
    
    .post-meta-left {
        text-align: left;
    }
    
    .post-meta-date {
        white-space: nowrap;
    }
    
    .view-online {
        text-align: right;
    }
    
    .view-online-link {
        word-wrap: none;
        white-space: nowrap;
        color: #15212A;
    }
    
    .feature-image {
        padding-bottom: 30px;
        width: 100%;
    }
    
    .feature-image-with-caption {
        padding-bottom: 10px;
    }
    
    .feature-image-caption {
        width: 100%;
        padding-bottom: 30px;
        text-align: center;
        font-size: 13px;
        color: #738a94;
    }
    
    .post-content {
        max-width: 600px !important;
        font-family: Georgia, serif;
        font-size: 18px;
        line-height: 1.5em;
        color: #15212A;
        padding-bottom: 20px;
        border-bottom: 1px solid #e5eff5;
    }
    
    .post-content-sans-serif {
        max-width: 600px !important;
        font-size: 17px;
        line-height: 1.5em;
        color: #15212A;
        padding-bottom: 20px;
        border-bottom: 1px solid #e5eff5;
    }
    
    .post-content a,
    .post-content-sans-serif a {
        color: #FF1A75;
        text-decoration: underline;
    }
    
    a[data-flickr-embed] img {
        height: auto;
    }
    
    .kg-bookmark-card {
        width: 100%;
        background: #ffffff;
    }
    
    .kg-bookmark-card a {
        text-decoration: none;
    }
    
    .kg-card + .kg-bookmark-card {
        margin-top: 0;
    }
    
    .kg-image-card img {
        display: block;
        margin: 0 auto;
        width: auto;
        height: auto !important;
    }
    
    .kg-bookmark-container {
        display: flex;
        min-height: 148px;
        color: #15212A;
        font-family: -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Oxygen, Ubuntu, Cantarell, \\"Open Sans\\", \\"Helvetica Neue\\", sans-serif;
        text-decoration: none;
        border-radius: 3px;
        border: 1px solid #e5eff5;
    }
    
    .kg-bookmark-content {
        display: inline-block;
        width: 100%;
        padding: 20px;
    }
    
    .kg-bookmark-title {
        color: #15212A;
        font-size: 15px;
        line-height: 1.5em;
        font-weight: 600;
    }
    
    .kg-bookmark-description {
        display: -webkit-box;
        overflow-y: hidden;
        margin-top: 12px;
        max-height: 40px;
        color: #738a94;
        font-size: 13px;
        line-height: 1.5em;
        font-weight: 400;
    
        -webkit-line-clamp: 2;
        -webkit-box-orient: vertical;
    }
    
    .kg-bookmark-thumbnail {
        min-width: 140px;
        max-width: 180px;
        background-repeat: no-repeat;
        background-size: cover;
        background-position: center;
        border-radius: 0 2px 2px 0;
    }
    
    .kg-bookmark-thumbnail img {
        display: none;
    }
    
    .kg-bookmark-metadata {
        display: flex;
        flex-wrap: wrap;
        align-items: center;
        margin-top: 14px;
        color: #15212A;
        font-size: 13px;
        font-weight: 400;
    }
    
    .kg-bookmark-icon {
        margin-right: 8px;
        width: 22px;
        height: 22px;
    }
    
    .kg-bookmark-author {
        line-height: 1.5em;
    }
    
    .kg-bookmark-publisher {
        overflow: hidden;
        max-width: 240px;
        line-height: 1.5em;
        text-overflow: ellipsis;
        white-space: nowrap;
    }
    
    .kg-bookmark-publisher:before {
        content: \\"•\\";
        margin: 0 6px;
    }
    
    .kg-gallery-container {
        margin-top: -20px;
    }
    
    .kg-gallery-image img {
        width: 100% !important;
        height: auto !important;
        padding-top: 20px;
    }
    
    .kg-video-preview {
        background-color: #1d1f21;
        background-image: radial-gradient(circle at center, #5b5f66, #1d1f21);
        display: block;
        text-decoration: none !important;
    }
    
    .kg-video-preview table {
        background-size: cover;
        min-height: 200px; /* for when images aren't loaded */
    }
    
    .kg-video-play-button {
        height: 2em;
        width: 3em;
        margin: 0 auto;
        border-radius: 10px;
        padding: 1em 0.8em 0.6em 1em;
        font-size: 1em; /* change this to resize */
        background-color: rgba(0,0,0,0.85);
    }
    
    .kg-video-play-button div {
        display: block;
        width: 0;
        height: 0;
        margin: 0 auto;
        line-height: 0px; /* fix for Yahoo Mail */
        border-color: transparent transparent transparent white;
        border-style: solid;
        border-width: 0.8em 0 0.8em 1.5em;
    }
    
    .kg-nft-link {
        display: block;
        text-decoration: none !important;
        color: #15212A !important;
        font-family: inherit !important;
        font-size: 14px;
        line-height: 1.3em;
        padding-top: 4px;
        padding-right: 20px;
        padding-left: 20px;
        padding-bottom: 4px;
    }
    
    .kg-twitter-link {
        display: block;
        text-decoration: none !important;
        color: #15212A !important;
        font-family: inherit !important;
        font-size: 15px;
        padding: 8px;
        line-height: 1.3em;
    }
    
    .kg-audio-thumbnail.placeholder {
        background: #FF1A75 !important;
    }
    
    .kg-callout-card {
        display: flex;
        margin: 0 0 1.5em 0;
        padding: 20px 28px;
        border-radius: 3px;
    }
    
    .kg-callout-card p {
        margin: 0
    }
    
    .kg-callout-card-grey {
        background: #eef0f2;
    }
    
    .kg-callout-card-white {
        background: #fff;
        box-shadow: inset 0 0 0 1px #dddedf;
    }
    
    .kg-callout-card-blue {
        background: #E9F6FB;
    }
    
    .kg-callout-card-green {
        background: #E8F8EA;
    }
    
    .kg-callout-card-yellow {
        background: #FCF4E3;
    }
    
    .kg-callout-card-red {
        background: #FBE9E9;
    }
    
    .kg-callout-card-pink {
        background: #FCEEF8;
    }
    
    .kg-callout-card-purple {
        background: #F2EDFC;
    }
    
    .kg-callout-card-accent {
        background: #FF1A75;
        color: #fff;
    }
    
    .kg-callout-card-accent a {
        color: #fff;
    }
    
    .kg-callout-emoji {
        padding-right: 12px;
        font-size: 20px;
    }
    
    .kg-header-card {
        margin: 0 0 1.5em 0;
        padding: 110px 35px 110px 35px;
        text-align: center;
    }
    
    .kg-header-card.kg-size-small {
        padding-top: 75px;
        padding-bottom: 75px;
    }
    
    .kg-header-card.kg-size-large {
        padding-top: 140px;
        padding-bottom: 140px;
    }
    
    .kg-header-card.kg-align-left {
        text-align: left;
    }
    
    .kg-header-card.kg-style-dark {
        background: #15171a;
        color: #ffffff;
    }
    
    .kg-header-card.kg-style-light {
        background-color: #F9F9FA;
    }
    
    .kg-header-card.kg-style-accent {
        background: #FF1A75;
        color: #ffffff;
    }
    
    .kg-header-card.kg-style-image {
        background-color: #e7e7eb;
        background-size: cover;
        background-position: center center;
        color: #ffffff;
    }
    
    .kg-header-card h2 {
        font-size: 3em;
        font-weight: 700;
        line-height: 1.1em;
        margin: 0 0 0.125em;
    }
    
    .kg-header-card h2 strong {
        font-weight: 800;
    }
    
    .kg-header-card.kg-size-small h2 {
        font-size: 2.5em;
    }
    
    .kg-header-card.kg-size-large h2 {
        font-size: 3.5em;
    }
    
    .kg-header-card h3 {
        font-size: 1.125em;
        font-weight: 500;
        line-height: 1.3em;
        margin: 0;
    }
    
    .kg-header-card h3 strong {
        font-weight: 700;
    }
    
    .kg-header-card.kg-size-large h3 {
        font-size: 1.25em;
    }
    
    .kg-header-card.kg-size-small h3 {
        font-size: 1em;
    }
    
    .kg-header-card-button {
        margin-top: 1.75em;
        background: #ffffff;
        border-radius: 5px;
        box-sizing: border-box;
        cursor: pointer;
        display: inline-block;
        font-size: 14px;
        font-weight: bold;
        margin: 0;
        padding: 8px 16px;
        text-decoration: none !important;
        color: #15171A !important;
    }
    
    .kg-size-large .kg-header-card-button {
        margin-top: 2em;
    }
    
    .kg-size-small .kg-header-card-button {
        margin-top: 1.5em;
    }
    
    .kg-style-light .kg-header-card-button {
        background: #FF1A75 !important;
        color: #ffffff !important;
    }
    
    
    /* -------------------------------------
        HEADER, FOOTER, MAIN
    ------------------------------------- */
    .main {
        background: #ffffff;
        border-radius: 3px;
        width: 100%;
    }
    
    .wrapper {
        box-sizing: border-box;
        padding: 0 20px;
    }
    
    .content-block {
        padding-bottom: 10px;
        padding-top: 10px;
    }
    
    .footer {
        color: #738a94;
        margin-top: 20px;
        text-align: center;
        font-size: 13px;
        padding-bottom: 10px;
        padding-top: 10px;
        padding-left: 30px;
        padding-right: 30px;
        line-height: 1.5em;
    }
    
    .footer a {
        color: #738a94;
        text-decoration: underline;
    }
    
    /* -------------------------------------
        BUTTONS
    ------------------------------------- */
    .btn {
        box-sizing: border-box;
        width: 100%;
        display: table;
    }
    
    .btn>tbody>tr>td {
        padding-bottom: 15px;
    }
    
    .btn table {
        width: auto;
    }
    
    .btn table td {
        background-color: #ffffff;
        border-radius: 5px;
        text-align: center;
    }
    
    .btn a {
        background-color: #ffffff;
        border: solid 1px #3498db;
        border-radius: 5px;
        box-sizing: border-box;
        color: #3498db;
        cursor: pointer;
        display: inline-block;
        font-size: 14px;
        font-weight: bold;
        margin: 0;
        padding: 12px 25px;
        text-decoration: none;
    }
    
    .btn-primary table td {
        background-color: #3498db;
    }
    
    .btn-primary a {
        background-color: #3498db;
        border-color: #3498db;
        color: #ffffff;
    }
    
    .btn-accent table td {
        background-color: ;
    }
    
    .btn-accent a {
        background-color: ;
        border-color: ;
        color: ;
    }
    
    /* -------------------------------------
        OTHER STYLES THAT MIGHT BE USEFUL
    ------------------------------------- */
    .last {
        margin-bottom: 0;
    }
    
    .first {
        margin-top: 0;
    }
    
    .align-center {
        text-align: center;
    }
    
    .align-right {
        text-align: right;
    }
    
    .align-left {
        text-align: left;
    }
    
    .clear {
        clear: both;
    }
    
    .mt0 {
        margin-top: 0;
    }
    
    .mb0 {
        margin-bottom: 0;
    }
    
    .preheader {
        color: transparent;
        display: none;
        height: 0;
        max-height: 0;
        max-width: 0;
        opacity: 0;
        overflow: hidden;
        mso-hide: all;
        visibility: hidden;
        width: 0;
    }
    
    /* -------------------------------------
        RESPONSIVE AND MOBILE FRIENDLY STYLES
    ------------------------------------- */
    @media only screen and (max-width: 620px) {
    
        table.body {
            width: 100%;
            min-width: 100%;
        }
    
        table.body p,
        table.body ul,
        table.body ol,
        table.body td,
        table.body span {
            font-size: 16px !important;
        }
    
        table.body pre {
            white-space: pre-wrap !important;
            word-break: break-word !important;
        }
    
        table.body .wrapper,
        table.body .article {
            padding: 0 10px !important;
        }
    
        table.body .content {
            padding: 0 !important;
        }
    
        table.body .container {
            padding: 0 !important;
            width: 100% !important;
        }
    
        table.body .main {
            border-left-width: 0 !important;
            border-radius: 0 !important;
            border-right-width: 0 !important;
        }
    
        table.body .btn table {
            width: 100% !important;
        }
    
        table.body .btn a {
            width: 100% !important;
        }
    
        table.body .img-responsive {
            height: auto !important;
            max-width: 100% !important;
            width: auto !important;
        }
    
        table.body .site-icon img {
            width: 40px !important;
            height: 40px !important;
        }
    
        table.body .site-url a {
            font-size: 14px !important;
            padding-bottom: 15px !important;
        }
    
        table.body .post-meta {
            white-space: normal !important;
            font-size: 12px !important;
            line-height: 1.5em;
        }
    
        table.body .view-online-link,
        table.body .footer,
        table.body .footer a {
            font-size: 12px !important;
        }
    
        table.body .post-title a {
            font-size: 32px !important;
            line-height: 1.15em !important;
        }
    
        table.body .kg-bookmark-card {
            width: 90vw;
        }
    
        table.body .kg-bookmark-thumbnail {
            display: none !important;
        }
    
        table.body .kg-bookmark-metadata span {
            font-size: 13px !important;
        }
    
        table.body .kg-embed-card {
            max-width: 90vw !important;
        }
    
        table.body h1 {
            font-size: 32px !important;
            line-height: 1.3em !important;
        }
    
        table.body h2 {
            font-size: 26px !important;
            line-height: 1.22em !important;
        }
    
        table.body h3 {
            font-size: 21px !important;
            line-height: 1.25em !important;
        }
    
        table.body h4 {
            font-size: 19px !important;
            line-height: 1.3em !important;
        }
    
        table.body h5 {
            font-size: 16px !important;
            line-height: 1.4em !important;
        }
    
        table.body h6 {
            font-size: 16px !important;
            line-height: 1.4em !important;
        }
    
        table.body blockquote {
            font-size: 17px;
            line-height: 1.6em;
            margin-bottom: 0;
            padding-left: 15px;
        }
    
        table.body blockquote.kg-blockquote-alt {
            border-left: 0 none !important;
            margin: 0 0 2.5em 0 !important;
            padding: 0 50px 0 50px !important;
            font-size: 1.2em;
        }
    
        table.body blockquote + * {
            margin-top: 1.5em !important;
        }
    
        table.body hr {
            margin: 2em 0 !important;
        }
    
        table.body figcaption,
        table.body figcaption a {
            font-size: 13px !important;
        }
    
    }
    
    /* -------------------------------------
        PRESERVE THESE STYLES IN THE HEAD
    ------------------------------------- */
    @media all {
        .ExternalClass {
            width: 100%;
        }
    
        .ExternalClass,
        .ExternalClass p,
        .ExternalClass span,
        .ExternalClass font,
        .ExternalClass td,
        .ExternalClass div {
            line-height: 100%;
        }
    
        .apple-link a {
            color: inherit !important;
            font-family: inherit !important;
            font-size: inherit !important;
            font-weight: inherit !important;
            line-height: inherit !important;
            text-decoration: none !important;
        }
    
        #MessageViewBody a {
            color: inherit;
            text-decoration: none;
            font-size: inherit;
            font-family: inherit;
            font-weight: inherit;
            line-height: inherit;
        }
    
        .btn-primary table td:hover {
            background-color: #34495e !important;
        }
    
        .btn-primary a:hover {
            background-color: #34495e !important;
            border-color: #34495e !important;
        }
    }
    
    </style>
  </head>
  <body style=\\"background-color: #ffffff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; -webkit-font-smoothing: antialiased; font-size: 14px; line-height: 1.5em; margin: 0; padding: 0; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%;\\">

    <table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"body\\" style=\\"border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;\\">
      <tr>
        <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top;\\">&nbsp;</td>
        <td class=\\"container\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top; display: block; Margin: 0 auto; padding: 10px;\\">
          <div class=\\"content\\" style=\\"box-sizing: border-box; display: block; Margin: 0 auto; max-width: 600px; padding: 30px 20px;\\">

            <!-- START CENTERED CONTAINER -->
            <table class=\\"main\\" style=\\"border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; background: #ffffff; border-radius: 8px;\\">

              <!-- START MAIN CONTENT AREA -->
              <tr>
                <td class=\\"wrapper\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top; box-sizing: border-box;\\">
                  <table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;\\">
                    <tr>
                      <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top;\\">
                        <p style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 20px; color: #15212A; font-weight: bold; line-height: 25px; margin: 0; margin-bottom: 15px;\\">Hey there,</p>
                        <p style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 16px; color: #3A464C; font-weight: normal; margin: 0; line-height: 25px; margin-bottom: 16px;\\">Your  post  <a href=\\"http://127.0.0.1:2369/integrations/\\" style=\\"font-weight: bold; color: #15212A;\\">Setting up apps and custom integrations</a> was mentioned in:</p>

                        <!--[if !mso !vml]-->
                        <figure style=\\"margin:0 0 1.5em;padding:0;width:100%;\\">
                          <a style=\\"display:flex;min-height:148px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;background:#F9F9FA;border-radius:3px;border:1px solid #F9F9FA;color:#15171a;text-decoration:none\\" href=\\"http://testpage.com/external-article-1234-email-test/\\">
                            <div style=\\"display:inline-block; width:100%; padding:20px\\">
                              <div style=\\"color:#15212a;font-size:16px;line-height:1.3em;font-weight:600\\">Test Page</div>
                              <div style=\\"display:-webkit-box;overflow-y:hidden;margin-top:12px;max-height:40px;color:#738a94;font-size:13px;line-height:1.5em;font-weight:400\\">Test description</div>
                              <div style=\\"display:flex;margin-top:14px;color:#15212a;font-size:13px;font-weight:400\\">
                                
                                
                                <span style=\\"font-size:13px;line-height:1.5em\\">&nbsp;&#x2022;&nbsp;John Doe</span>
                              </div>
                            </div>
                          </a>
                        </figure>
                        <!--[endif]-->

                        <!--[if vml]>
                        <table style=\\"border-collapse: collapse; border-spacing: 0; margin: 0; padding: 0; width: 100%; border: 1px solid #f9f9fa; background: #f9f9fa; font-family: -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Oxygen, Ubuntu, Cantarell, \\"Open Sans\\", \\"Helvetica Neue\\", sans-serif;\\">
                            <tr>
                                <td width=\\"100%\\" style=\\"padding: 20px;\\">
                                    <table style=\\"margin: 0; padding: 0; border-collapse: collapse; border-spacing: 0;\\">
                                        <tr>
                                            <td><a style=\\"color: #15212A; font-size: 15px; line-height: 1.5em; font-weight: 600; text-decoration: none;\\" href=\\"http://testpage.com/external-article-1234-email-test/\\">Test Page</a></td>
                                        </tr>
                                        <tr>
                                            <td><div><a href=\\"http://testpage.com/external-article-1234-email-test/\\" style=\\"margin-top: 12px; color: #738a94; font-size: 13px; line-height: 1.5em; font-weight: 400;text-decoration: none;\\">Test description</a></div></td>
                                        </tr>
                                        <tr>
                                            <td style=\\"padding-top: 14px; color: #15212A; font-size: 13px; font-weight: 400; line-height: 1.5em;\\">
                                                <table style=\\"margin: 0; padding: 0; border-collapse: collapse; border-spacing: 0;\\">
                                                    <tr>
                                                        <td valign=\\"middle\\">
                                                            <a href=\\"http://testpage.com/external-article-1234-email-test/\\" style=\\"color: #15212A; text-decoration: none;\\">
                                                                
                                                                &nbsp;&#x2022;&nbsp;
                                                                John Doe
                                                            </a>
                                                        </td>
                                                    </tr>
                                                </table>
                                            </td>
                                        </tr>
                                    </table>
                                </td>
                            </tr>
                        </table>
                        <![endif]-->

                        <table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"btn btn-primary\\" style=\\"border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; box-sizing: border-box;\\">
                          <tbody>
                            <tr>
                              <td align=\\"left\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 16px; vertical-align: top; padding-top: 32px; padding-bottom: 12px;\\">
                                <table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: auto;\\">
                                  <tbody>
                                    <tr>
                                      <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 16px; vertical-align: top; background-color: #FF1A75; border-radius: 5px; text-align: center;\\"> <a href=\\"http://127.0.0.1:2369/ghost/#/mentions\\" target=\\"_blank\\" style=\\"display: inline-block; color: #ffffff; background-color: #FF1A75; border: solid 1px #FF1A75; border-radius: 5px; box-sizing: border-box; cursor: pointer; text-decoration: none; font-size: 16px; font-weight: normal; margin: 0; padding: 9px 22px 10px; border-color: #FF1A75;\\">View mentions</a></td>
                                    </tr>
                                  </tbody>
                                </table>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                        <hr/>
                        <p style=\\"word-break: break-all; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 15px; color: #3A464C; font-weight: normal; margin: 0; line-height: 25px; margin-bottom: 5px;\\">You can also copy & paste this URL into your browser:</p>
                        <p class=\\"text-link\\" style=\\"word-break: break-all; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 15px; line-height: 25px; margin-top:0; color: #3A464C;\\">http://127.0.0.1:2369/ghost/#/mentions</p>
                      </td>
                    </tr>

                    <!-- START FOOTER -->
                    <tr>
                        <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top; padding-top: 80px;\\">
                        <p class=\\"small\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; line-height: 18px; font-size: 11px; color: #738A94; font-weight: normal; margin: 0; margin-bottom: 2px;\\">This message was sent from <a class=\\"small\\" href=\\"http://127.0.0.1:2369/\\" style=\\"text-decoration: underline; color: #738A94; font-size: 11px;\\">127.0.0.1</a> to <a class=\\"small\\" href=\\"mailto:jbloggs@example.com\\" style=\\"text-decoration: underline; color: #738A94; font-size: 11px;\\">jbloggs@example.com</a></p>
                      </td>
                    </tr>
                    <tr>
                      <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top; padding-top: 2px\\">
                        <p class=\\"small\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; line-height: 18px; font-size: 11px; color: #738A94; font-weight: normal; margin: 0; margin-bottom: 2px;\\">Don’t want to receive these emails? Manage your preferences <a class=\\"small\\" href=\\"http://127.0.0.1:2369/ghost/#/settings/staff/joe-bloggs\\" style=\\"text-decoration: underline; color: #738A94; font-size: 11px;\\">here</a>.</p>
                      </td>
                    </tr>

                    <!-- END FOOTER -->
                  </table>
                </td>
              </tr>

            <!-- END MAIN CONTENT AREA -->
            </table>


          <!-- END CENTERED CONTAINER -->
          </div>
        </td>
        <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top;\\">&nbsp;</td>
      </tr>
    </table>
  </body>
</html>
"
`;
